k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: financeiro
  labels:
    name: financeiro
